--- a/mixed-model-two-factor.Rmd
+++ b/mixed-model-two-factor.Rmd
@@ -1,11 +1,11 @@
-# Two-factor Mixed Model
+## Two-factor Mixed Model
 
 
 
 An approach for two factor random effects model via maximum likelihood in R Matlab and Julia. It's based on Statistical Modeling and Computation (2014) Chapter 10, example 10.10.   See the [previous chapter][One-factor Mixed Model] for a one factor model, and the [Supplemental Section][Two-factor] for the Matlab and Julia versions of this example. Note that the text has a typo on the `sigma2` variance estimate (value should be .0023 not .023).
 
 
-## Data Setup
+### Data Setup
 
 The data regards the breeding value of a set of five sires in raising pigs. Each
 sire is mated to a random group of dams, with the response being the average
@@ -23,7 +23,7 @@ d = data.frame(d[order(d$sire), ], y)
 ```
 
 
-## Function
+### Function
 
 The function takes the log variances `eta` as input to keep positive.
 
@@ -55,8 +55,7 @@ two_factor_re <- function(mu, eta_alpha, eta_gamma, eta) {
 
 
 
-
-## Estimation
+### Estimation
 
 Starting values and test.
 
@@ -72,7 +71,6 @@ Xalpha = diag(5) %x% rep(1, 4)
 
 Xgamma = diag(10) %x% rep(1, 2)
 ```
-
 
 
 Estimate at starting values.
@@ -96,7 +94,7 @@ fit_mle = mle2(two_factor_re, start = starts,  method = 'BFGS')
 ```
 
 
-## Comparison
+### Comparison
 
 We can compare to the <span class="pack" style = "">lme4</span> model result.
 
@@ -113,7 +111,7 @@ summary(fit_mer)
 ```
 
 
-## Source
+### Source
 
 Original code available at https://github.com/m-clark/Miscellaneous-R-Code/blob/master/ModelFitting/Mixed%20Models/two_factor_RE.R
 
